[gd_scene load_steps=2 format=3 uid="uid://cudqlup4x37bs"]

[ext_resource type="Script" uid="uid://bfggadg6itgeb" path="res://Scenes/pause_menu_scene.gd" id="1_64nwh"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_64nwh")

[node name="PausePanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PausePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PausePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="PausePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PAUSED"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="PausePanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PausePanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Resume"

[node name="OptionsButton" type="Button" parent="PausePanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Options"

[node name="MainMenuButton" type="Button" parent="PausePanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Main Menu"

[node name="OptionsPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "OPTIONS"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="OptionsPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="VolumeControl" type="VBoxContainer" parent="OptionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VolumeLabel" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/VolumeControl"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Volume"

[node name="SliderContainer" type="HBoxContainer" parent="OptionsPanel/MarginContainer/VBoxContainer/VolumeControl"]
layout_mode = 2

[node name="VolumeSlider" type="HSlider" parent="OptionsPanel/MarginContainer/VBoxContainer/VolumeControl"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 10.0

[node name="VolumeValue" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/VolumeControl"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "10"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="OptionsPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "CONTROLS"
horizontal_alignment = 1

[node name="ControlsText" type="RichTextLabel" parent="OptionsPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "[center]A / D - Move Left/Right
W - Jump
Hold SHIFT - Run
L - Dash
J - Attack 1
K - Attack 2[/center]"
fit_content = true
scroll_active = false

[node name="Spacer3" type="Control" parent="OptionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="OptionsPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Back"
